--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:21.0.3'
     compile 'com.jakewharton:butterknife:6.0.0'
     compile 'com.android.support:support-v4:21.0.3'
+    compile 'me.grantland:autofittextview:0.2.+'
 }
