--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ repositories {
 
 android {
     compileSdkVersion 21
-    buildToolsVersion "21.1.1"
+    buildToolsVersion "21.1.2"
 
     defaultConfig {
         applicationId "org.jakelcode.schedule"
@@ -43,14 +43,15 @@ dependencies {
     compile('com.crashlytics.sdk.android:crashlytics:2.2.0@aar') {
         transitive = true;
     }
-    compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.squareup.dagger:dagger:1.2.2'
-    compile 'com.squareup.dagger:dagger-compiler:1.2.2'
+    provided 'com.squareup.dagger:dagger-compiler:1.2.2'
     compile 'de.greenrobot:eventbus:2.4.0'
     compile 'com.path:android-priority-jobqueue:1.1.2'
     compile 'com.android.support:recyclerview-v7:21.0.3'
     compile 'com.android.support:cardview-v7:21.0.3'
     compile 'com.jakewharton:butterknife:6.0.0'
     compile 'com.android.support:support-v4:21.0.3'
+
     compile 'me.grantland:autofittextview:0.2.+'
+    compile 'io.realm:realm-android:0.78.0'
 }
