EditActivity to edit or add new cards Rename sndTerm to endTerm in Schedule.java

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,5 +53,6 @@ dependencies {
     compile 'com.android.support:support-v4:21.0.3'
 
     compile 'me.grantland:autofittextview:0.2.+'
+    compile 'com.rengwuxian.materialedittext:library:1.8.2'
     compile 'io.realm:realm-android:0.78.0'
 }
