--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,19 +3,21 @@
     package="org.jakelcode.schedule" >
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
-    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:name=".ScheduleApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/MainTheme" >
+        android:label="@string/app_name">
+
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:theme="@style/MainTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,24 +25,32 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".NotifyReceiver"/>
-        <receiver android:name=".DailyCheckReceiver">
-            <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
-            </intent-filter>
-        </receiver>
-
-        <service android:name=".NotifyService"/>
-        <service android:name=".DailyCheckService"/>
-
-        <meta-data
-            android:name="com.crashlytics.ApiKey"
-            android:value="af3c47e27d96e78a0abb633c50996740a2928603" />
+        <activity
+            android:name=".EditActivity"
+            android:label="@string/title_activity_edit"
+            android:theme="@style/EditTheme"
+            >
+        </activity>
 
         <activity
             android:name=".SettingActivity"
             android:label="@string/title_activity_setting" >
         </activity>
+
+        <receiver android:name=".NotifyReceiver" />
+        <receiver android:name=".DailyCheckReceiver" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+
+        <service android:name=".NotifyService" />
+        <service android:name=".DailyCheckService" />
+
+        <meta-data
+            android:name="com.crashlytics.ApiKey"
+            android:value="af3c47e27d96e78a0abb633c50996740a2928603" />
+
     </application>
 
 </manifest>
