--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,10 +49,24 @@ dependencies {
     compile 'com.path:android-priority-jobqueue:1.1.2'
     compile 'com.android.support:recyclerview-v7:21.0.3'
     compile 'com.android.support:cardview-v7:21.0.3'
-    compile 'com.jakewharton:butterknife:6.0.0'
+    compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.android.support:support-v4:21.0.3'
 
     compile 'me.grantland:autofittextview:0.2.+'
     compile 'com.rengwuxian.materialedittext:library:1.8.2'
     compile 'io.realm:realm-android:0.78.0'
 }
+
+/*
+-keep class butterknife.** { *; }
+-dontwarn butterknife.internal.**
+-keep class **$$ViewInjector { *; }
+
+-keepclasseswithmembernames class * {
+    @butterknife.* ;
+}
+
+-keepclasseswithmembernames class * {
+    @butterknife.* ;
+}
+*/
