--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,9 +52,11 @@ dependencies {
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.android.support:support-v4:21.0.3'
 
-    compile 'me.grantland:autofittextview:0.2.+'
-    compile 'com.rengwuxian.materialedittext:library:1.8.2'
     compile 'io.realm:realm-android:0.78.0'
+
+    compile 'me.grantland:autofittextview:0.2.+'
+    compile 'com.melnykov:floatingactionbutton:1.2.0'
+    compile 'com.rengwuxian.materialedittext:library:1.8.2'
 }
 
 /*
