--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,12 @@
             android:name=".EditActivity"
             android:label="@string/title_activity_edit"
             android:theme="@style/EditTheme"
+            android:parentActivityName=".MainActivity"
             >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"
+                />
         </activity>
 
         <activity
